# cuttlegate

./: .air.toml  .env.example  .gitignore  .golangci.yml  .mcp.json  BENCHMARKS.md  CHANGELOG.md  Dockerfile  Justfile  README.md  VISION.md  arch_test.go  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum  scrub-history.py
.githooks/: commit-msg  post-commit  pre-commit
.github/workflows/: ci.yml  docs.yml  release.yml  smoke.yml
cmd/cuttlegate/: client.go  config.go  config_test.go  eval.go  flags.go  globals.go  login.go  login_test.go  main.go  main_test.go  projects.go  token.go  whoami.go
db/: embed.go
docs/: api-contract.md  api-reference.md  codebase-index.md  configuration.md  engineering-principles.md  frontend-index.md  getting-started-mcp.md  getting-started.md  operator-contrast-guidance.md  sdk-reference.md  security-checklist-v1.md  ui-design.md
e2e/: .gitignore  README.md  fixtures.ts  global-setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
scripts/: smoke.sh
sdk/python/: README.md  pyproject.toml
sdk/python/cuttlegate/: __init__.py  _internal.py  async_client.py  cached.py  client.py  errors.py  openfeature.py  streaming.py  testing.py  types.py
sdk/python/docs/: api-reference.md
sdk/python/tests/: test_async_client.py  test_cached.py  test_client.py  test_evaluation.py  test_mock.py  test_openfeature.py  test_streaming.py
site/: docusaurus.config.ts  package-lock.json  sidebars.ts
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+425 files in other folders)
