[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cuttlegate"
version = "0.1.0"
description = "Python SDK for the Cuttlegate feature flag service"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
openfeature = [
    "openfeature-sdk>=0.7",
]
dev = [
    "pytest>=8.0",
    "openfeature-sdk>=0.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cuttlegate*"]
